# DashboardDemo

./: Cargo.toml  README.md
debug_crates/BlueEngine/: Cargo.toml
debug_crates/BlueEngine/examples/utils/: scissor.rs
debug_crates/BlueEngineUtilities/: Cargo.toml
src/: main.rs  pages.rs  utils.rs  widgets.rs
src/pages/: dashboard.rs  login.rs
src/pages/dashboard/: customers_page.rs  dashboard_page.rs
src/widgets/: center_div.rs  primitive.rs  toolbar.rs
